# backend_hackertone

modelproject/: .gitignore  Dockerfile  create_locations.py  docker-compose.yml  manage.py  nginx.default.conf  pyproject.toml  requirements-prod.txt  requirements.txt
modelproject/accounts/: admin.py  apps.py  auth.py  auth_utils.py  models.py  serializers.py  signals.py  urls.py  views.py
modelproject/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py
modelproject/couponbook/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
modelproject/couponbook/curation/: example.py  serializers.py  utils.py
modelproject/couponbook/latlng/: models.py  utils.py
modelproject/couponbook/migrations/: 0001_initial.py  0002_place_owner_alter_coupontemplate_valid_until.py  0002_remove_coupontemplate_views.py  0003_alter_coupontemplate_place.py  0003_alter_place_address_district.py  0004_place_lat_place_lng.py  0004_place_tags.py
modelproject/couponbook/tests/: __init__.py  apitests.py  curationtests.py  decorators.py  modeltests.py
modelproject/coupons/: models.py
modelproject/data_api/: urls.py  views.py
modelproject/modelproject/: deploy_settings.py  settings.py  settings_base.py  urls.py
modelproject/modelproject/data/: locations.json
modelproject/payment/: models.py
modelproject/static-dev/: ping.txt
modelproject/utils/: secret_key.py
