[project]
name = "modelproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "cffi==1.17.1",
    "django==5.2.5",
    "django-cors-headers>=4.4",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular==0.28.0",
    "inflection==0.5.1",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "mysqlclient==2.2.7",
    "packaging==25.0",
    "pycparser==2.22",
    "pymysql==1.1.1",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.26.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
]

[project.optional-dependencies]
prod = [
    "cryptography>=45.0.6",
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
]
