[project]
name = "modelproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "cffi==1.17.1",
    "django==5.2.5",
    "django-cors-headers>=4.4",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.2",
    "drf-spectacular==0.28.0",
    "google-genai>=1.29.0",
    "gunicorn==23.0.0",
    "inflection==0.5.1",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "packaging==25.0",
    "pycparser==2.22",
    "pymysql>=1.1.0",
    "python-decouple==3.8",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "rpds-py==0.26.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
]

[project.optional-dependencies]
prod = [
    "cryptography>=45.0.6",
    "django-storages[s3]==1.14.6",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "django-debug-toolbar>=6.0.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "modelproject.local_settings"
python_files = [
    "*tests.py",
    "tests.py"
]
